tests/tables/fails/parser/missing_token.tbl
# CHECK: fails/parser/missing_token.tbl(4,14): error: Expected value, got <End-Of-File>
# CHECK: table foo = [
# CHECK:              ^
table foo = [